# metabuidcity

./: .gitignore  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
candid/: assetstorage.did
src/begods_assethandler/wasm/: assethandler.wasm
src/begods_backend/: nft.did
src/begods_backend/wasm/: nft.wasm
src/core_nft/: Cargo.toml  README.md  test.cpp
src/core_nft/scripts/: build.sh  generate_did.sh  run_integrations_tests.sh
src/core_nft/scripts/deploy/local/: deploy_storage.sh
src/core_nft/src/: guards.rs  lib.rs  memory.rs  state.rs  utils.rs
src/core_nft/src/jobs/: mod.rs  upload_garbage_collector.rs
src/core_nft/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/core_nft/src/migrations/: mod.rs
src/core_nft/src/migrations/types/: state.rs
src/core_nft/src/queries/: http_request.rs  icrc10.rs  icrc21.rs  icrc3.rs  icrc37.rs  icrc7.rs  mod.rs
src/core_nft/src/types/: fund_manager.rs  http.rs  icrc10.rs  icrc21.rs  icrc3.rs  icrc37.rs  icrc7.rs  management.rs  metadata.rs  mod.rs  nft.rs  sub_canister.rs  value_custom.rs
src/core_nft/src/updates/: icrc37.rs  icrc7.rs  management.rs  mod.rs
src/core_nft/wasm/: storage_canister.wasm
src/declarations/metabuildcity_backend/: index.d.ts  index.js
src/declarations/metabuildcity_frontend/: index.d.ts  index.js
src/metabuildcity_backend/: main.mo
src/metabuildcity_frontend/: .dfxignore  assetstorage.did  index.html  package.json  tsconfig.json  vite.config.js
src/metabuildcity_frontend/public/: .htaccess  .ic-assets.txt  (+5 more)
src/metabuildcity_nft/: main.mo
src/metabuildcity_webgl/: index.html  package-lock.json  package.json  vite.config.ts
(+47 files in other folders)
